// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconSave /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSave /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSave /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSave /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSave /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconSave /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconSave /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconSave /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconSave /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconSave /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconSave /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconSave /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M183 31H31v194h194V64.5L183 31zM72 33h98v71H72V33zm131 166.1c0 6-4.9 10.9-10.9 10.9H63.9c-6 0-10.9-4.9-10.9-10.9v-66.2c0-6 4.9-10.9 10.9-10.9h128.2c6 0 10.9 4.9 10.9 10.9v66.2zM130 42h24v48h-24V42z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSave /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
